staging/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-staging
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-staging
  template:
    metadata:
      labels:
        app: api-staging
    spec:
      containers:
        - name: api-staging
          image: irwan34/api-service:4320dc2215bcb9c4fd59e016f18395ffbd7c4b1d
          ports:
            - containerPort: 8080
