staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: irwan34/python-app:9319a9a299ce3d5fd71a6dce03e609098691eb07
          ports:
            - containerPort: 8000
