staging/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-staging
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-staging
  template:
    metadata:
      labels:
        app: frontend-staging
    spec:
      containers:
        - name: frontend-staging
          image: irwan34/frontend-service:270366acf89baa1b4d03ff267055bfe480bec140
          ports:
            - containerPort: 8080
