staging/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  namespace: staging
spec:
  selector:
    app: api-staging
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
