staging/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
  namespace: staging
spec:
  selector:
    app: frontend-staging
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
