staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: staging
spec:
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
